--- a/retro/index.html
+++ b/retro/index.html
@@ -183,7 +183,7 @@
             <ul class="media-list myblog">
                 <li class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="img/camera-clothes-fashion-girl-photography-Favim.com-341369.jpg" alt="...">
+                        <img class="media-object" src="img/autumn-bicycle-wide-1600x900.png" alt="...">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Media heading</h4>
@@ -194,7 +194,7 @@
                 </li>
                 <li class="media">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="img/camera-clothes-fashion-girl-photography-Favim.com-341369.jpg" alt="...">
+                        <img class="media-object" src="img/autumn-bicycle-wide-1600x900.png" alt="...">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">Media heading</h4>
@@ -253,7 +253,75 @@
             </div>
         </div>
         </div>
-        <div class="bottom"></div>
+        <div class="bottom">
+        <ul class="jsProfileProjectList" data-count="4" style="min-height: 508px;">
+        <li class="oProjectTile isActive animated none" data-category="47" data-project-id="450391664695959552" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~VINXiRTgqgr3nlWlxmUieqU2TTclNEg4xFgnUtV8vhUloW*jGKoiED-hNCMIoYgRXJqfIs1K-JS5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">email</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive isLast animated none" data-category="47" data-project-id="450391344166346752" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~VINXiRTgqgr3nlWlxmUieqU2TTclNEg4c43ae6*HWBjfRtWdfswbTKbg0YkB-7sLXJqfIs1K-JS5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">landing page design</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive animated none" data-category="47" data-project-id="450390090452033536" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~VINXiRTgqgr3nlWlxmUieqU2TTclNEg4b*SkDt7zOS7fUpX6AKPsu50nlnggVZ8yXJqfIs1K-JS5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">landing page design</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive isLast animated none" data-category="8" data-project-id="450389426031435776" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~VINXiRTgqgr3nlWlxmUieqU2TTclNEg4kMRKFiix*YsbdsCfy6RjZ7axfELIN2jhXJqfIs1K-JS5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">landing page design</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive animated jp-hidden" data-category="47" data-project-id="443424932885843968" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~8Cen7zpTWXydf3Q6RU*s4l*3OY4NhBpKrI9-Q9metWi5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">email design</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive isLast animated jp-hidden" data-category="47" data-project-id="443424932818735104" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~8Cen7zpTWXydf3Q6RU*s4qRqEmvP8-T1rI9-Q9metWi5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">Landing Page</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive animated jp-hidden" data-category="47" data-project-id="443424932751626240" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~8Cen7zpTWXydf3Q6RU*s4jFLCtz3C2errI9-Q9metWi5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">web site design</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive isLast animated jp-hidden" data-category="47" data-project-id="443424932671934464" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~8Cen7zpTWXydf3Q6RU*s4jLdw-I1O1pkrI9-Q9metWi5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">Landing Page</a>
+            </div>
+        </li>
+        <li class="oProjectTile isActive animated jp-hidden" data-category="47" data-project-id="443424932604825600" data-contract="">
+            <div class="oProjectThumbnail">
+                <img src="https://www.odesk.com/att/~~8Cen7zpTWXydf3Q6RU*s4l-vtLpJp*SsrI9-Q9metWi5HDU*5JVCJA==">                </div>
+            <div class="oProjectTileInfo oTxtEnlarged oImageOver">
+                <a class="oRowTitle oProjectTitle oEllipsis">email design</a>
+            </div>
+        </li>
+
+
+
+
     </div>
     <script type="application/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="application/javascript" src="js/bootstrap.js"></script>
