--- a/whappbook/index.html
+++ b/whappbook/index.html
@@ -1,369 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>WHAPPBOOK</title>
-
-    <link href="css/main.css" rel="stylesheet"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+<head>
+    <meta charset="utf-8">
+    <title>Company page</title>
 </head>
 <body>
+<p>Welcome! Here you can find following things:</p>
+<ol>
 
+        <li> <em><a href="#logo">Company's logo</a></em></li>
 
+    <li><a href="#employees">List of employees</a></li>
+</ol>
 
-<div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-<div class="modal-dialog modal-lg">
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        </div>
-<div class="modal-body">
-    <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-            <div class="description">
-                <h5>THE INSTRUCTIONS</h5>
-                <h2>CREATE WITHIN SECONDS</h2>
-                <p>Just send the Whatsapp conversation to make@whappbook.com tellus eget condimentum rhoncus, sem quam semper libero.</p>
-            </div>
-        </div>
-    </div>
-    <div class="row" >
-        <div class="col-sm-4">
-            <div class="description">
-                <img src="img/iphone_graph.png" alt="iphone2"/>
-                <h5>STEP 1</h5>
-                <h3>Open a chat in whatsapp</h3>
-                <p>Open a chat in Whatsapp and go to Group Info. </p>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="description">
-                <img src="img/iphone_graph.png"  alt="iphone2"/>
-                <h5>STEP 2</h5>
-                <h3>Select email conversation</h3>
-                <p>Tap ‘Email Conversation’ and select ‘Attach Media’. </p>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="description">
-                <img src="img/iphone_graph.png"  alt="iphone2"/>
-                <h5>STEP 3</h5>
-                <h3>Send to make@whappbook.com</h3>
-                <p>Send the email to make@whappbook.com</p>
-            </div>
-        </div>
-    </div>
-    <div class="modal-footer">
+<h1>Company's logo</h1>
 
-    </div>
-</div>
-</div>
-</div>
-</div>
+<p>Company uses following logos:</p>
+<ul>
+    <li><img src="new_logo.gif" alt="New logo"/>New logo</li>
+    <li><img src="old_logo.gif" alt="Old logo"/>Old logo</li>
+</ul>
 
-<div class="row header">
-    <img class="book_img" src="img/book.png" alt="whappbook"/>
-        <div>
-            <h1>WHAPPBOOK</h1>
-            <h3>Create a beautiful book of your memories <br/> directly from Whatsapp.</h3>
-            <div class="video_cont">
-                <img src="img/video.png" alt=""/>
-            </div>
-        </div>
-</div>
+<h1>List of employees</h1>
 
-<div class="row main">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="row main_cont">
-            <div class="col-sm-6">
-                <div class="description text-left ">
-                    <h5>THE PRODUCT</h5>
-                    <h2>YOUR WHATSAPP CHATS <br/>ON PAPER</h2>
-                    <p>Cherish the memories you’ve shared with relatives, friends and others. You can now create a beautiful little book with messages and photos from a Whatsapp group chat.
-                        We call it a Whappbook. It’s the perfect gift!</p>
-                </div>
-            </div>
-            <div class="col-sm-6">
-
-                    <div>
-                        <img class="every_img" src="img/size.png" alt=".."/>
-                    </div>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row about">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="row about_cont">
-            <div class="col-sm-4 ">
-                <div >
-                    <img class="about_img" src="img/brush.png" alt=".."/>
-                    <h3>Memories</h3>
-                    <p>A Whappbook captures around one month of chats. </p>
-                </div>
-            </div>
-            <div class="col-sm-4 ">
-                <div >
-                    <img class="about_img" src="img/brush.png" alt=".."/>
-                    <h3>Beautful quality</h3>
-                    <p>A book consists out of 72 pages with 20 grams fine quality paper.</p>
-                </div>
-            </div>
-            <div class="col-sm-4 ">
-                <div >
-                    <img class="about_img" src="img/brush.png" alt=".."/>
-                    <h3>Content</h3>
-                    <p>Maecenas tempus, tellus eget condimentum tellus eget condimentum rhoncus. </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-   <div class="row about2 ">
-       <div class="col-md-10 col-md-offset-1">
-           <div class="row">
-               <div class="col-sm-6 ">
-                   <img class="every_img " src="img/open_book.png" alt="openBook"/>
-               </div>
-               <div class="col-sm-6 ">
-                   <div class="description text-left ">
-                       <h5>GROUP STATISTICS</h5>
-                       <h2>CHECK OUT WHAT HAPPENED</h2>
-                       <p>Group statistics en soort content in het boekje. tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </div>
-       <div class="row about2mob col-md-offset-1 ">
-       <div class="col-md-10 col-md-offset-1 ">
-           <div class="row">
-               <div class="col-sm-6 ">
-                   <div class="description text-left ">
-                       <h5>GROUP STATISTICS</h5>
-                       <h2>CHECK OUT WHAT HAPPENED</h2>
-                       <p>Group statistics en soort content in het boekje. tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
-                   </div>
-               </div>
-               <div class="col-sm-6 ">
-                   <img class="every_img " src="img/open_book.png" alt="openBook"/>
-               </div>
-           </div>
-       </div>
-</div>
-
-
-
-<div class="row fun_facts">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="description">
-            <h5>FUN FACTS</h5>
-            <h2>GET TO KNOW YOUR FRIENDS</h2>
-            <p>One of the unique aspects of a Whappbook is that we extract fun little statistics from all the messages that have been sent in your group chat. A Whappbook always starts with 2 pages that contain a list of your friends and their statistics. Who posts the most messages? Who posts the most photos? Who never uses emoticons? Whappbook uncovers everyones true colors! ;)</p>
-        </div>
-    </div>
-</div>
-
-<div class="row fun_facts">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="row">
-            <div class="col-sm-3 col-xs-6 friends">
-                <img src="img/night_ow.png" alt="..."/>
-                <h4>Night Owl</h4>
-                <p>Dibero, sit amet adipiscing sem neque sed ipsum. </p>
-            </div>
-            <div class="col-sm-3 col-xs-6 friends">
-                <img src="img/party_an.png" alt=".."/>
-                <h4>Party Animal</h4>
-                <p>Amet adipiscing sem neque sed ipsum. Nam quam </p>
-            </div>
-            <div class="col-sm-3 col-xs-6 friends">
-                <img src="img/emotion.png" alt=".."/>
-                <h4>Emotiqueen</h4>
-                <p>Dibero, sit amet adipiscing sem neque sed ipsum.  </p>
-            </div>
-            <div class="col-sm-3 col-xs-6 friends">
-                <img src="img/lazy.png" alt=""/>
-                <h4>Lazy Ass</h4>
-                <p> adipiscing sem neque sed ipsum. Nam quam </p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="slider">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <img class="every_img" src="img/slider.png" alt="...">
-                <div class="carousel-caption">
-                    <h3>BACKUP YOUR CHATS</h3>
-                    <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit </p>
-                </div>
-            </div>
-            <div class="item">
-                <img class="every_img" src="img/slider.png" alt="...">
-                <div class="carousel-caption">
-                    <h3>BACKUP YOUR CHATS</h3>
-                    <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit</p>
-                </div>
-            </div>
-            <div class="item">
-                <img class="every_img" src="img/slider.png" alt="...">
-                <div class="carousel-caption">
-                    <h3>BACKUP YOUR CHATS</h3>
-                    <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit</p>
-                </div>
-            </div>
-
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>
-</div>
-
-<div class="row instructions" data-toggle="modal" data-target="#myModal">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <div class="description">
-                    <h5>THE INSTRUCTIONS</h5>
-                    <h2>CREATE WITHIN SECONDS</h2>
-                    <p>Just send the Whatsapp conversation to <span style="color: #000000; font-weight: bold">make@whappbook.com</span> tellus eget condimentum rhoncus, sem quam semper libero.</p>
-                </div>
-            </div>
-        </div>
-       <div class="row instructions_cont">
-           <div class="col-sm-4">
-               <div>
-               <img src="img/iphone_graph.png" alt="iphone2"/>
-                   <h5>STEP 1</h5>
-                   <h3>Open a chat in whatsapp</h3>
-                   <p>Open a chat in Whatsapp and go to Group Info. </p>
-               </div>
-           </div>
-           <div class="col-sm-4">
-               <div>
-                   <img src="img/iphone_graph.png"  alt="iphone2"/>
-                   <h5>STEP 2</h5>
-                   <h3>Select email conversation</h3>
-                   <p>Tap ‘Email Conversation’ and select ‘Attach Media’. </p>
-               </div>
-           </div>
-           <div class="col-sm-4">
-               <div>
-                   <img src="img/iphone_graph.png"  alt="iphone2"/>
-                   <h5>STEP 3</h5>
-                   <h3>Send to make@whappbook.com</h3>
-                   <p>Send the email to make@whappbook.com</p>
-               </div>
-           </div>
-       </div>
-    </div>
-</div>
-<!-- Modal -->
-
-<div class="row pricing ">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="row">
-            <div class="col-sm-6">
-                <img class="every_img" src="img/black_book.png" alt="..."/>
-            </div>
-            <div class="col-sm-6">
-                <div class="description text-left regular_descr">
-                    <h5>PRICING</h5>
-                    <h2>ORDER YOURS FOR € 29.50</h2>
-                    <p>You’ll get your Whappbook. Free shipping! Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
-                </div>
-            </div>
-        </div>
-     </div>
-</div>
-
-<div class="row pricing_mob ">
-    <div class="col-md-10 col-md-offset-1">
-        <div class="row">
-
-            <div class="col-sm-6">
-                <div class="description text-left regular_descr">
-                    <h5>PRICING</h5>
-                    <h2>ORDER YOURS FOR € 29.50</h2>
-                    <p>You’ll get your Whappbook. Free shipping! Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <img class="every_img" src="img/black_book.png" alt="..."/>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row last_punchline">
-    <div class="col-md-6 col-md-offset-3">
-        <h3>Email your Whatsapp conversation to: <br/> make@whappbook.com</h3>
-            <div class="button">
-                <a href="#" class="bttn">GET STARTED</a>
-            </div>
-    </div>
-</div>
-
-<div class="row footer">
-    <div class="col-md-6 ">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3 text-left">
-        <h4 class="">WHAPPBOOK</h4>
-                <ul class="list-unstyled">
-                    <li>Home·</li>
-                    <li>Partner·</li>
-                    <li>FAQ·</li>
-                    <li>Terms·</li>
-                    <li>Privacy</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="row">
-            <div class="col-sm-6 col-sm-offset-5">
-                <div class="row social">
-                    <div class="col-xs-4"><a href="#"><img src="img/twit.png" alt=".."/></a></div>
-                    <div class="col-xs-4"><a href="#"><img src="img/twit.png" alt=".."/></a></div>
-                    <div class="col-xs-4"><a href="#"><img src="img/insta.png" alt=""/></a></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-
-
+<table>
+    <thead>
+    <tr>
+        <th>First name</th>
+        <th>Last name</th>
+    </tr>
+    </thead>
+    <tr>
+        <td>Mary</td>
+        <td>Williams</td>
+    </tr>
+    <tr>
+        <td>James</td>
+        <td>Smith</td>
+    </tr>
+</table>
 </body>
 </html>
