--- a/ZlassAgent/index.html
+++ b/ZlassAgent/index.html
@@ -22,13 +22,17 @@
                 <p>BROKER ASSOCIATE & BUSINESS PRODUCTIVITY COACH</p>
             </div>
         </div>
-
+        <div class="hidden-xs hidden-sm" id="wave">
+            <span class="glyphicon glyphicon-arrow-down"></span>
+        </div>
     </div>
 
     <div class="row area">
+
         <div class="col-xs-offset-1">
             <div class="row">
                 <div class="col-sm-8">
+
                     <p>SERVING NORTHERN CALIFORNIA & SAN FRANCISCO BAY AREA</p>
                 </div>
                 <div class="col-sm-4">
