--- a/ZlassAgent/index.html
+++ b/ZlassAgent/index.html
@@ -96,7 +96,7 @@
         <div class="col-xs-offset-1 col-xs-10 col-xs-offset-1">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="img/photo.png" alt="//"/>
+                    <img class="every_img" src="img/photo.png" alt="//"/>
 
                     <address>
                         <strong>phone</strong> <span>650-454-8514</span><br>
