--- a/ZlassAgent/index.html
+++ b/ZlassAgent/index.html
@@ -11,9 +11,7 @@
     <title></title>
 </head>
 <body>
-<div class="container-fluid">
-
-    <div class="row header">
+    <header class="row header">
 
         <div class="col-xs-offset-1">
             <div class="headerCont">
@@ -25,14 +23,12 @@
         <div class="hidden-xs hidden-sm" id="wave">
             <span class="glyphicon glyphicon-arrow-down"></span>
         </div>
-    </div>
+    </header>
 
     <div class="row area">
-
-        <div class="col-xs-offset-1">
-            <div class="row">
+        <div class="col-md-offset-1">
+            <div class="row area_cont">
                 <div class="col-sm-8">
-
                     <p>SERVING NORTHERN CALIFORNIA & SAN FRANCISCO BAY AREA</p>
                 </div>
                 <div class="col-sm-4">
@@ -142,7 +138,7 @@
     <div class="row rights text-center">
         <span>© 2014 ZLASS LLC.</span>
     </div>
-</div>
-</div>
+
+
 </body>
 </html>
