--- a/ZlassAgent/index.html
+++ b/ZlassAgent/index.html
@@ -8,7 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <title></title>
+    <title>ZlassAgent</title>
 </head>
 <body>
     <header class="row header">
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="hidden-xs hidden-sm" id="wave">
-            <span class="glyphicon glyphicon-arrow-down"></span>
+            <img src="img/arrow.png" alt="arrow"/>
         </div>
     </header>
 
@@ -39,7 +39,7 @@
     </div>
 
     <div class="row listings">
-        <div class="col-sm-8 listimg list1 featurImg">
+        <div class="col-sm-8 listimg bigImg featurImg">
             <img class="every_img" src="img/1.png" alt="//"/>
             <h2>F E A T U R I N G</h2>
             <div class="listDescr">
@@ -55,11 +55,11 @@
             </div>
         </div>
         <div class="col-sm-4 listimg ">
-            <div class="list2"><img class="every_img" src="img/2.png" alt="//"/></div>
-            <div class="list2"><img class="every_img" src="img/3.png" alt="//"/></div>
+            <div class="list2"><img class="every_img smallImg" src="img/2.png" alt="//"/></div>
+            <div class="list2"><img class="every_img smallImg" src="img/3.png" alt="//"/></div>
         </div>
         <div>
-            <div class="col-sm-4 listimg list2 soldImg">
+            <div class="col-sm-4 listimg smallImg soldImg">
                 <img class="every_img" src="img/sold.png" alt="//"/>
                 <div class="soldDescr text-center text-uppercase">
                     <h4>just sold!</h4>
@@ -67,10 +67,10 @@
                     <span class="text-uppercase">multiple offers!</span>
                 </div>
             </div>
-            <div class="col-sm-4 listimg list2">
+            <div class="col-sm-4 listimg smallImg">
                 <img class="every_img" src="img/5.png" alt="//"/>
             </div>
-            <div class="col-sm-4 listimg list2">
+            <div class="col-sm-4 listimg smallImg">
                 <img class="every_img" src="img/9.png" alt="//"/>
             </div>
         </div>
@@ -111,7 +111,7 @@
     </div>
 
     <div class="row footer text-center">
-        <div class="infoArea">
+        <div class="infoArea col-xs-offset-1 col-xs-10 ">
             <h1>Contact us</h1>
             <address>
                 <strong>phone</strong>   <span>650-454-8514</span><br>
